Add GPU Lightmaps

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-
+GameDefaultMap=/Game/European_Street/Levels/EuropeanStreet.EuropeanStreet
+EditorStartupMap=/Game/European_Street/Levels/EuropeanStreet.EuropeanStreet
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -13,4 +13,13 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/UE4_Environment")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/UE4_Environment")
+
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
+
+[/Script/Engine.RendererSettings]
+r.NormalMapsForStaticLighting=True
+r.VirtualTextures=True
+r.SkinCache.CompileShaders=True
+r.RayTracing=True
 
