Add Sci-fi City BlockOut

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/European_Street/Levels/EuropeanStreet.EuropeanStreet
-EditorStartupMap=/Game/European_Street/Levels/EuropeanStreet.EuropeanStreet
+GameDefaultMap=/Game/European_Street/Levels/Sci-fi_CIty.Sci-fi_City
+EditorStartupMap=/Game/European_Street/Levels/Sci-fi_CIty.Sci-fi_City
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
